--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/passport": "^1.0.11",
-    "cookie-session": "^2.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "googleapis": "^105.0.0",
+    "messagebird": "^4.0.1",
     "mongoose": "^6.9.0",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
