--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express-session": "^1.17.3",
     "googleapis": "^105.0.0",
     "messagebird": "^4.0.1",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.40",
     "mongoose": "^6.9.0",
     "node-schedule": "^2.1.1",
     "passport": "^0.6.0",
